# travel-film-maker

./: .gitignore  README.md  pyproject.toml  story.yaml  timeline.yaml
cli/travel_film_maker_cli/: main.py
cli/travel_film_maker_cli/commands/: doctor.py  init.py  preview.py  render.py  validate.py
docs/: ARCHITECTURE.md  DAVINCI_EXPORT.md  MEDIA_SOURCES.md  ROADMAP.md  STORYBOARD.md  STYLEGUIDE.md
exporters/travel_film_maker_exporters/: __init__.py  base.py
exporters/travel_film_maker_exporters/davinci/: __init__.py  exporter.py
schemas/: asset.schema.json  project.schema.json  style.schema.json  timeline.schema.json  trip.schema.json
scripts/: main.py
src/travel_film_maker/analysis/: __init__.py  duplicate_detector.py  face_blur_detector.py  gps_matcher.py  media_probe.py  quality_score.py  scene_detector.py
src/travel_film_maker/cli/: main.py
src/travel_film_maker/core/: config.py  errors.py  project.py  story.py  timeline.py  trip_plan.py
src/travel_film_maker/edit/: __init__.py  ken_burns.py  markers.py  music_sync.py  pacing.py  selector.py  transitions.py
src/travel_film_maker/export/: __init__.py  edl.py  opentimelineio.py  preview.py
src/travel_film_maker/geo/: __init__.py  elevation.py  geocoding.py  map_shots.py  route.py
src/travel_film_maker/ingest/: __init__.py  exif.py  filesystem.py  google_photos.py  gopro.py  gpx.py
src/travel_film_maker/plugins/: __init__.py  base.py  registry.py
tests/unit/: test_engine_pipeline.py  test_init_command.py  test_media_sources.py  test_timeline.py  test_trip_plan.py
(+15 files in other folders)
